<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.trabajo.carlos.lapitchatapp.SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_civAvatar"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/avatar" />

    <TextView
        android:id="@+id/settings_txvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/settings_txvStatus"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:text="@string/settings_txvName"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/settings_txvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/settings_txvStatus"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/settings_btnCambiarImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="@android:color/white"
        android:paddingEnd="40dp"
        android:paddingStart="40dp"
        android:text="@string/settings_btnCambiarImagen"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/settings_btnCambiarStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@color/colorAccent"
        android:paddingEnd="40dp"
        android:paddingStart="40dp"
        android:text="@string/settings_btnCambiarEstado"
        android:textColor="@android:color/white" />

</RelativeLayout>
